# sonos-tray

./: pyproject.toml  sonos_tray.py
